Fix horizontal scroll bar. Basically, there was a long line of "code" that does not wrap, which causes it to overflow. For this, I think it's okay to break on spaces (though still not mid-word).

--- a/theme/tutorial.less
+++ b/theme/tutorial.less
@@ -265,7 +265,7 @@ span.docs.inlinebutton {
 span.docs.inlineblock {
     padding: 0.05rem .2rem;
     padding-bottom: 0.1rem;
-    white-space: nowrap;
+    white-space: break-spaces;
     border-radius: 0;
     border-bottom: 3px solid var(--inline-namespace-color);
     color: black;
